--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             android:weightSum="3"
-            android:background="#FFF"
+            android:background="#000"
             android:layout_height="match_parent"
             android:baselineAligned="false">
 
@@ -34,35 +34,63 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/bat"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:background="@drawable/bat"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/bat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/bat"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
 
             </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:id="@+id/ball"
                 android:layout_weight="1"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:background="@drawable/ball"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
 
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/ball"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/ball"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+                </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/chair"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:background="@drawable/chair"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
 
-            </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/chair"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/chair"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
+                </LinearLayout>
 
             <!-- Three Colums end -->
 
@@ -74,7 +102,7 @@
             android:layout_weight="1"
             android:id="@+id/ObjectLowerHalf"
             android:orientation="horizontal"
-            android:background="#FFF"
+            android:background="#000"
             android:weightSum="3"
             android:layout_height="match_parent">
 
@@ -83,35 +111,63 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:orientation="horizontal"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:id="@+id/pen"
-                android:background="@drawable/pen"
                 android:layout_height="match_parent">
 
-            </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/pen"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/pen"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
+                </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:id="@+id/pencil"
-                android:orientation="horizontal"
-                android:background="@drawable/pencil"
                 android:layout_height="match_parent">
 
-            </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/pencil"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/pencil"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+                </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/table"
-                android:orientation="horizontal"
+                android:background="#FFF"
                 android:layout_margin="2dp"
-                android:background="@drawable/table"
                 android:layout_height="match_parent">
 
-            </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/table"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/table"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+                </LinearLayout>
 
             <!-- Three columns end -->
 
@@ -129,7 +185,7 @@
         android:id="@+id/output"
         android:gravity="center"
         android:orientation="vertical"
-        android:background="#fff"
+        android:background="@drawable/border"
         android:layout_height="match_parent">
 
         <ImageView
