--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:layout_height="match_parent">
 
                 <LinearLayout
@@ -56,26 +56,28 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:layout_height="match_parent">
 
+
                 <LinearLayout
-                    android:id="@+id/ball"
+                    android:id="@+id/pen"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/ball"
+                    android:background="@drawable/pen"
                     android:orientation="horizontal">
 
                 </LinearLayout>
+
                 </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:layout_height="match_parent">
 
 
@@ -112,17 +114,19 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_gravity="center"
+                android:layout_margin="1dp"
+                android:gravity="center"
                 android:layout_height="match_parent">
 
 
                 <LinearLayout
-                    android:id="@+id/pen"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:id="@+id/ball"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/pen"
+                    android:background="@drawable/ball"
                     android:orientation="horizontal">
 
                 </LinearLayout>
@@ -133,7 +137,7 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:layout_height="match_parent">
 
 
@@ -153,7 +157,7 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:layout_height="match_parent">
 
 
@@ -190,11 +194,10 @@
 
         <ImageView
             android:id="@+id/objectImages"
-            android:layout_margin="-10dp"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-             />
+            android:layout_margin="-10dp"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/outputText"
@@ -234,7 +237,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:id="@+id/black"
                 android:orientation="horizontal"
                 android:background="#000000"
@@ -245,7 +248,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:id="@+id/red"
                 android:orientation="horizontal"
                 android:background="#D32F2F"
@@ -256,7 +259,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:id="@+id/yellow"
                 android:orientation="horizontal"
                 android:background="#FBC02D"
@@ -286,7 +289,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:id="@+id/orange"
                 android:orientation="horizontal"
                 android:background="#FF5722"
@@ -297,7 +300,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:id="@+id/green"
                 android:orientation="horizontal"
                 android:background="#4CAF50"
@@ -308,7 +311,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_margin="2dp"
+                android:layout_margin="1dp"
                 android:orientation="horizontal"
                 android:id="@+id/blue"
                 android:background="#1976D2"
