--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:weightSum="3"
     android:orientation="vertical"
     tools:context="xyz.tanishq.colorsdailyobject.MainActivity">
 
@@ -327,24 +326,17 @@
 
         </LinearLayout>
 
-
-    </LinearLayout>
-
-
-
-        <!-- view for AdMob Banner Ad -->
         <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2.3"
-            android:layout_gravity="center"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id_1" />
+            ads:adUnitId="@string/finalbanner">
+        </com.google.android.gms.ads.AdView>
 
-
-
+    </LinearLayout>
 
 </LinearLayout>
